--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,3 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </FrameLayout>
+<Button
+    android:id="@+id/btnMatches"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Mis Matches"
+    android:layout_margin="8dp"/>
