--- a/res/drawable/background_gradient.xml
+++ b/res/drawable/background_gradient.xml
@@ -1,1 +1,5 @@
-
+<gradient xmlns:android="http://schemas.android.com/apk/res/android"
+    android:type="linear"
+    android:angle="90"
+    android:startColor="#FF3366"
+    android:endColor="#FFD369"/>
