--- a/res/drawable/background_gradient.xml
+++ b/res/drawable/background_gradient.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <gradient xmlns:android="http://schemas.android.com/apk/res/android"
-    android:type="linear"
-    android:angle="90"
-    android:startColor="#FF3366"
-    android:endColor="#FFD369"/>
+    android:angle="45"
+    android:startColor="#FF5F6D"
+    android:endColor="#FFC371"
+    android:type="linear" />
