--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,5 +1,7 @@
-<gradient xmlns:android="http://schemas.android.com/apk/res/android"
-    android:type="linear"
-    android:angle="90"
-    android:startColor="#FF3366"
-    android:endColor="#FFD369"/>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="28dp"/>
+    <solid android:color="#FF3366"/>
+    <padding android:left="16dp" android:top="10dp" android:right="16dp" android:bottom="10dp"/>
+</shape>
