--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient">
 
+    <!-- Tarjetas estilo Tinder -->
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/cardStackView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- Botón Mis Matches -->
-    <Button
-        android:id="@+id/btnMatches"
+    <!-- Contenedor de botones en la parte inferior -->
+    <LinearLayout
+        android:id="@+id/bottomButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mis Matches"
-        android:layout_margin="8dp" />
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:padding="12dp"
+        android:background="@android:color/transparent">
 
-    <!-- Botón Configuración -->
-    <Button
-        android:id="@+id/btnSettings"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Configuración"
-        android:layout_margin="8dp"
-        android:layout_below="@id/btnMatches"/>
+        <Button
+            android:id="@+id/btnMatches"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="@string/mis_matches"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/btnSettings"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text="@string/configuracion"
+            android:background="@android:color/transparent"
+            android:textColor="@color/white"/>
+
+    </LinearLayout>
 
 </FrameLayout>
